feat: add promo slider

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -20,5 +20,8 @@
       "name": "Huobi Wallet",
       "description": "Multi-currency support, practical and convenient"
     }
+  },
+  "promo": {
+    "created-by": "Created by"
   }
 }
