improvement: add text truncation plugin

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -1,4 +1,7 @@
 {
+  "common": {
+    "read-more": "read more"
+  },
   "connect-wallet": {
     "custom-binancewallet": {
       "name": "Binance Chain",
