[FD 3390] Promo slider (#9)
* feat: add layout

* refactor: fixes after merge

* feat: add adaptive styles for header

* improvement: buttons and layout styles

* improvement: add swiper slider, remove strict mode

The strict had to remove because of
https://github.com/nolimits4web/swiper/issues/3852#issuecomment-777597779

* feat: add promo slider

* improvement: add text truncation plugin

* improvement: add text truncation plugin

* improvement: add autoplay for promo

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -1,4 +1,7 @@
 {
+  "common": {
+    "read-more": "read more"
+  },
   "connect-wallet": {
     "custom-binancewallet": {
       "name": "Binance Chain",
@@ -20,5 +23,8 @@
       "name": "Huobi Wallet",
       "description": "Multi-currency support, practical and convenient"
     }
+  },
+  "promo": {
+    "created-by": "Created by"
   }
 }
