--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -26,5 +26,11 @@
   },
   "promo": {
     "created-by": "Created by"
+  },
+  "unit": {
+    "BNB-value": "{value, number} BNB"
+  },
+  "error": {
+    "unexpected": "Unexpected error"
   }
 }
