--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -35,5 +35,15 @@
   },
   "go-back": {
     "action": "Go back"
+  },
+  "create-nft": {
+    "title": "Create NFT",
+    "label": {
+      "name": "Name"
+    },
+    "submit": "Create"
+  },
+  "validation": {
+    "required": "This field is required"
   }
 }
