--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -39,7 +39,8 @@
   "create-nft": {
     "title": "Create NFT",
     "label": {
-      "name": "Name"
+      "name": "Name",
+      "description": "Description"
     },
     "submit": "Create"
   },
