--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -42,7 +42,8 @@
       "name": "Name",
       "description": "Description",
       "channel": "Channel",
-      "standard": "Standard"
+      "standard": "Standard",
+      "supply": "Supply"
     },
     "channelOption": {
       "0": "Fine arts",
