feat: NFT details component

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -4,6 +4,10 @@
     "read-more": "read more",
     "view-all": "View all"
   },
+  "header": {
+    "create": "Create",
+    "connect": "Connect Wallet"
+  },
   "connect-wallet": {
     "custom-binancewallet": {
       "name": "Binance Chain",
