feat: add details page

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -66,6 +66,18 @@
     "submit": "Create",
     "submitting": "Creating"
   },
+  "details-nft": {
+    "tabs": {
+      "history": "History",
+      "bids": "Bids",
+      "owners": "Owners",
+      "token-info": "Token info"
+    },
+    "info": {
+      "date": "{value, date, medium}",
+      "time": "at {value, time, short}"
+    }
+  },
   "validation": {
     "required": "This field is required"
   },
