feat: profile page

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -109,5 +109,10 @@
   },
   "brands": {
     "title": "Hot Brands"
+  },
+  "profile": {
+    "customize-btn": "Customize",
+    "follow": "Follow",
+    "subscribers": "Subscribers"
   }
 }
