--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -34,6 +34,7 @@
     "created-by": "Created by"
   },
   "unit": {
+    "day": "{value, plural, =0 {0 days} =1 {1 day} other {# days}}",
     "BNB-value": "{value, number} BNB"
   },
   "error": {
@@ -109,5 +110,22 @@
   },
   "brands": {
     "title": "Hot Brands"
+  },
+  "publish-nft": {
+    "submit": "Put on Sale",
+    "submitting": "Submitting",
+    "auction-type": {
+      "fixed-swap": "English swap",
+      "english-auction": "English auction"
+    },
+    "label": {
+      "price": "Sale price",
+      "amount": "Amount",
+      "minBid": "Minimum bid",
+      "directPurchase": "Direct purchase price",
+      "reservePrice": "Reserve price",
+      "count": "Count",
+      "duration": "Expiration Date"
+    }
   }
 }
