--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -126,6 +126,9 @@
       "reservePrice": "Reserve price",
       "count": "Count",
       "duration": "Expiration Date"
+    },
+    "tooltip": {
+      "directPurchase": "TODO Direct purchase price description"
     }
   }
 }
