[FD-3386] Update title

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -112,6 +112,7 @@
     "title": "Hot Brands"
   },
   "publish-nft": {
+    "title": "Put on sale",
     "submit": "Put on Sale",
     "submitting": "Submitting",
     "auction-type": {
