--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -135,6 +135,15 @@
   "profile": {
     "customize-btn": "Customize",
     "follow": "Follow",
-    "subscribers": "Subscribers"
+    "subscribers": "Subscribers",
+    "bio": "Bio",
+    "tabs": {
+      "my-items": "My items",
+      "my-brands": "My brands",
+      "activity": "Activity",
+      "liked": "Liked",
+      "following": "Following",
+      "followers": "Followers"
+    }
   }
 }
