[FD-3395] Base profile page (#11)
* improvement: add useAccount hook

* feat: profile page

* refactor: move product card to common

* refactor: move pencil icon to common

* refactor: remove wide container component

* improvement: profile items and other theme improvements

* fix: after merge

* improvement: move literals to localization file

* refactor: profile tabs composition

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -131,5 +131,19 @@
     "tooltip": {
       "directPurchase": "TODO Direct purchase price description"
     }
+  },
+  "profile": {
+    "customize-btn": "Customize",
+    "follow": "Follow",
+    "subscribers": "Subscribers",
+    "bio": "Bio",
+    "tabs": {
+      "my-items": "My items",
+      "my-brands": "My brands",
+      "activity": "Activity",
+      "liked": "Liked",
+      "following": "Following",
+      "followers": "Followers"
+    }
   }
 }
