[FD-3420] Profile - Brands list

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -135,6 +135,11 @@
   "profile": {
     "customize-btn": "Customize",
     "follow": "Follow",
-    "subscribers": "Subscribers"
+    "subscribers": "Subscribers",
+    "brands": {
+      "itemsCount": "{value, plural, =0 {No items} =1 {One item} other {# items}}",
+      "addNewItem": "Add new item",
+      "createNewItem": "Create new item"
+    }
   }
 }
