[FD-3420] Profile - Brands list

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -139,7 +139,8 @@
     "brands": {
       "itemsCount": "{value, plural, =0 {No items} =1 {One item} other {# items}}",
       "addNewItem": "Add new item",
-      "createNewItem": "Create new item"
+      "createNewItem": "Create new item",
+      "createNewBrand": "Create new brand"
     }
   }
 }
