feat: add activity table for profile page

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -144,6 +144,15 @@
       "liked": "Liked",
       "following": "Following",
       "followers": "Followers"
+    },
+    "activity": {
+      "event": "Event",
+      "item": "Item",
+      "price": "Price",
+      "quantity": "Quantity",
+      "from": "From",
+      "to": "To",
+      "date": "Date"
     }
   }
 }
