Fd 3420 profile brands (#12)
* [FD-3420] Profile - Brands list

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -144,6 +144,12 @@
       "liked": "Liked",
       "following": "Following",
       "followers": "Followers"
+    },
+    "brands": {
+      "itemsCount": "{value, plural, =0 {No items} =1 {One item} other {# items}}",
+      "addNewItem": "Add new item",
+      "createNewItem": "Create new item",
+      "createNewBrand": "Create new brand"
     }
   }
 }
