--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -150,6 +150,15 @@
       "addNewItem": "Add new item",
       "createNewItem": "Create new item",
       "createNewBrand": "Create new brand"
+    },
+    "activity": {
+      "event": "Event",
+      "item": "Item",
+      "price": "Price",
+      "quantity": "Quantity",
+      "from": "From",
+      "to": "To",
+      "date": "Date"
     }
   }
 }
