[FD-3424] Profile - Following

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -135,6 +135,7 @@
   "profile": {
     "customize-btn": "Customize",
     "follow": "Follow",
+    "unfollow": "Unfollow",
     "subscribers": "Subscribers",
     "bio": "Bio",
     "tabs": {
