Revert "feat: add not connected component"
This reverts commit 2c7fd55643c3434638e5e8bd85ab61a55e9d6724.
For that was created the separated task.

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -2,14 +2,11 @@
   "common": {
     "load-more": "Load more",
     "read-more": "read more",
-    "view-all": "View all",
-    "connect": "Connect Wallet"
+    "view-all": "View all"
   },
   "header": {
-    "create": "Create"
-  },
-  "not-connected": {
-    "title": "Please, connect you wallet"
+    "create": "Create",
+    "connect": "Connect Wallet"
   },
   "connect-wallet": {
     "custom-binancewallet": {
