--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -10,8 +10,10 @@
     "connect": "Connect Wallet"
   },
   "connect-wallet": {
-    "connect-your-wallet": "Connect your wallet",
-    "page-content-unavailable-without-wallet": "The content of this page is only available with the connected wallet",
+    "placeholder": {
+      "title": "Connect your wallet",
+      "description": "The content of this page is only available with the connected wallet"
+    },
     "custom-binancewallet": {
       "name": "Binance Chain",
       "description": "Binance Chain & Smart Chain Wallet"
