[FD-3432] Connected wallet dropdown Review fixes

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -14,6 +14,9 @@
     "profile-settings": "Profile settings",
     "disconnect": "Disconnect"
   },
+  "wallet": {
+    "unit": "{value, number} {unit}"
+  },
   "connect-wallet": {
     "custom-binancewallet": {
       "name": "Binance Chain",
