--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -132,11 +132,17 @@
   "publish-nft": {
     "title": "Put on sale",
     "submit": "Put on Sale",
+    "submitting": "Submitting",
+    "fee": "Fangible fee {value}%",
+    "recieve": "You will receive",
+    "expire": "Will expire on {value, date, medium} {value, time, short}",
+    "auction-amount": "In the auction you can only put up 1 copy for sale",
     "auction-type": {
-      "fixed-swap": "English swap",
+      "fixed-swap": "Fixed Price",
       "english-auction": "English auction"
     },
     "label": {
+      "type": "Type of Sale",
       "price": "Sale price",
       "amount": "Amount",
       "minBid": "Minimum bid",
@@ -146,7 +152,9 @@
       "duration": "Expiration Date"
     },
     "tooltip": {
-      "directPurchase": "TODO Direct purchase price description"
+      "directPurchase": "TODO Direct purchase price description",
+      "reservePrice": "TODO Reserve price description",
+      "duration": "TODO Expiration Date description"
     }
   },
   "profile": {
