feat: add profile data and make the profile edit form work

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -169,6 +169,7 @@
     "edit": {
       "label": {
         "username": "Username",
+        "full-name": "Full Name",
         "email": "Email",
         "custom-url": "Custom URL",
         "bio": "Bio",
