improvement: show success notification after profile edits

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -183,7 +183,8 @@
         "twitter": "Twitter Username",
         "facebook": "Facebook Username"
       },
-      "save-changes": "Save Changes"
+      "save-changes": "Save Changes",
+      "success-message": "Changes have been applied successfully."
     },
     "tabs": {
       "my-items": "My items",
