feat: add avatar setting dialog

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -190,6 +190,7 @@
     "share": "Share",
     "user-profile": "User profile",
     "edit-profile": "Edit profile",
+    "edit-avatar": "Edit avatar",
     "edit": {
       "label": {
         "username": "Username",
