feat: add profile cover setting dialog

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -191,6 +191,7 @@
     "user-profile": "User profile",
     "edit-profile": "Edit profile",
     "edit-avatar": "Edit avatar",
+    "edit-cover": "Edit profile cover",
     "edit": {
       "label": {
         "username": "Username",
