[FD-3386] Sold out

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -90,6 +90,7 @@
     "descr-short": "Collapse",
     "top-bid": "Top Bid",
     "buy-now": "Buy now",
+    "sold-out": "Sold out",
     "place-a-bid": "Place a bid",
     "tabs": {
       "history": "History",
