--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -14,6 +14,10 @@
     "profile-settings": "Profile settings",
     "disconnect": "Disconnect"
   },
+  "language": {
+    "en-US": "English",
+    "zh-CN": "中文"
+  },
   "social": {
     "share": "Share",
     "title-for-socials": "{title} — {description}",
