--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -27,6 +27,7 @@
     "telegram": "Telegram"
   },
   "wallet": {
+    "$-value": "${value}",
     "unit": "{value, number} {unit}"
   },
   "connect-wallet": {
