[FD-3420] My brands

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -11,6 +11,7 @@
     "create": "Create",
     "connect": "Connect Wallet",
     "inventory": "My Inventory",
+    "brands": "My Brands",
     "profile-settings": "Profile settings",
     "disconnect": "Disconnect"
   },
