[FE-3485] Upload file on drop

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -290,6 +290,6 @@
     "flip-h": "Flip horizontal"
   },
   "video-player": {
-    "unsupported": "Sorry, your browser doesn't support embedded videos or uploaded vide type!"
+    "unsupported": "Sorry, your browser doesn't support embedded videos or uploaded video file type!"
   }
 }
