[FE-3461] Top bid time

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -12,6 +12,14 @@
     "reset": "Reset",
     "restore": "Restore"
   },
+  "time": {
+    "time-over": "Time is over",
+    "time-left-short": "{days} {hours} {minutes} {seconds} left",
+    "days-short": "{days}d",
+    "hours-short": "{hours}h",
+    "minutes-short": "{minutes}m",
+    "seconds-short": "{seconds}s"
+  },
   "header": {
     "create": "Create",
     "connect": "Connect Wallet",
