refactor: hide not implemented features

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -10,7 +10,8 @@
     "apply": "Apply",
     "close": "Close",
     "reset": "Reset",
-    "restore": "Restore"
+    "restore": "Restore",
+    "coming-soon": "Coming soon..."
   },
   "time": {
     "time-over": "Time is over",
