--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -288,7 +288,11 @@
       "quantity": "Quantity",
       "from": "From",
       "to": "To",
-      "date": "Date"
+      "date": "Date",
+      "transfer": "Transfer",
+      "created": "Created",
+      "canceled": "Canceled",
+      "claimed": "Claimed"
     }
   },
   "buy-dialog": {
