[FAN-24] Activity tab API; [FAN-62] Fix loader in Promo; [FAN-77] Fix button in Fast movers; [FAN-58] Fix search input hover; [FAN-60] Fix Promo elements positioning.

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -27,7 +27,14 @@
     "inventory": "My Inventory",
     "brands": "My Brands",
     "profile-settings": "Profile settings",
-    "disconnect": "Disconnect"
+    "disconnect": "Disconnect",
+    "search": {
+      "placeholder": "Search by name, creator, brand...",
+      "empty": "No results found",
+      "items": "Items",
+      "brands": "Brands",
+      "users": "Users"
+    }
   },
   "language": {
     "en-US": "English",
