Revert "[FAN-24] Activity tab API"

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -295,11 +295,7 @@
       "quantity": "Quantity",
       "from": "From",
       "to": "To",
-      "date": "Date",
-      "transfer": "Transfer",
-      "created": "Created",
-      "canceled": "Canceled",
-      "claimed": "Claimed"
+      "date": "Date"
     }
   },
   "buy-dialog": {
