[FD-3386] Direct purchase and reserve prices are required

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -245,6 +245,9 @@
       "directPurchase": "TODO Direct purchase price description",
       "reservePrice": "TODO Reserve price description",
       "duration": "TODO Expiration Date description"
+    },
+    "error": {
+      "wrong-direct-reserve-bid-amount": "Make sure Minimum bid < Reserve price ≤ Direct purchase price"
     }
   },
   "profile": {
