--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -263,7 +263,7 @@
     "edit-cover": "Edit profile cover",
     "no-items": {
       "title": "No items found",
-      "descr": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore",
+      "descr": " ",
       "btn": "Browse market"
     },
     "edit": {
