Revert "[FD-3386] Filter brand's items"
This reverts commit 5255195549bc7d0377ade74233bfa2c7c99acc1c.

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -263,7 +263,7 @@
     "edit-cover": "Edit profile cover",
     "no-items": {
       "title": "No items found",
-      "descr": " ",
+      "descr": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore",
       "btn": "Browse market"
     },
     "edit": {
