--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -242,9 +242,9 @@
       "duration": "Expiration Date"
     },
     "tooltip": {
-      "directPurchase": "TODO Direct purchase price description",
-      "reservePrice": "TODO Reserve price description",
-      "duration": "TODO Expiration Date description"
+      "directPurchase": "A direct transaction price can be set, that is, users can skip the bidding process and buy directly at this price. The direct transaction price must be greater than the Minimum bid and Reserve price.",
+      "reservePrice": "Setting a reserve price creates a hidden limit,If you receive no bids equal to or greater than your reserve,your auction will not be sold.",
+      "duration": "Auction will be completed in this time"
     },
     "error": {
       "wrong-direct-reserve-bid-amount": "Make sure Minimum bid ≤ Reserve price < Direct purchase price"
