--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -15,6 +15,7 @@
   },
   "time": {
     "time-over": "Time is over",
+    "days-left": "{days} days left",
     "time-left-short": "{days} {hours} {minutes} {seconds} left",
     "days-short": "{days}d",
     "hours-short": "{hours}h",
