[FAN-129] Entry to claim (#51)
* refactor: add time is over text in NFT card

* refactor: move profile screen to own folder

* improvement: increase brands page loading speed

* feat: add profile bids

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -15,6 +15,7 @@
   },
   "time": {
     "time-over": "Time is over",
+    "days-left": "{days} days left",
     "time-left-short": "{days} {hours} {minutes} {seconds} left",
     "days-short": "{days}d",
     "hours-short": "{hours}h",
@@ -285,6 +286,7 @@
     },
     "tabs": {
       "my-items": "My items",
+      "my-bids": "My bids",
       "my-brands": "My brands",
       "activity": "Activity",
       "liked": "Liked",
