--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -340,5 +340,8 @@
         "creator": "Auction is in progress"
       }
     }
+  },
+  "product-card": {
+    "put-on-sale": "Put on sale"
   }
 }
