[FAN-125] ENABLE_TRANSFER

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -342,6 +342,8 @@
     }
   },
   "product-card": {
-    "put-on-sale": "Put on sale"
+    "put-on-sale": "Put on sale",
+    "transfer": "Transfer token",
+    "burn": "Burn token"
   }
 }
