[FD-3386] Cancel pool

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -322,6 +322,8 @@
   },
   "info-prices": {
     "claim": "Claim",
+    "cancel": "Cancel",
+    "canceled": "Canceled",
     "status": {
       "CompletedByDirectPurchase": {
         "creator": "Item has been sold",
