[FAN-24] Activity tab API

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -302,7 +302,9 @@
       "transfer": "Transfer",
       "created": "Created",
       "canceled": "Canceled",
-      "claimed": "Claimed"
+      "claimed": "Claimed",
+      "empty-title": "No activities found",
+      "empty-description": "You have not any activities yet"
     }
   },
   "buy-dialog": {
