feat: "my bids" query used only once

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -299,6 +299,12 @@
       "from": "From",
       "to": "To",
       "date": "Date"
+    },
+    "bids-categories": {
+      "all": "All",
+      "art": "Art",
+      "sport": "Sport",
+      "comics": "Comics"
     }
   },
   "buy-dialog": {
